<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".Unidad4Quiz">

    <TextView
        android:id="@+id/tvPreguntasTotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/preguntas_totales"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/opciones_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/preguntas_totales"
        android:text="@string/pregunta_aqui"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/opciones_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRespuestaA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/respuesta_a"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRespuestaB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/respuesta_b"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRespuestaC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/respuesta_c"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRespuestaD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/respuesta_d"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmmitQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/opciones_layout"
        android:layout_marginTop="40dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/seleccionar"
        android:textColor="#455A64" />

</RelativeLayout>