<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Unidad2Inicio">

    <ImageButton
        android:id="@+id/btnUnidad2Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F44336"
        android:contentDescription="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivUnidad2logo"
        android:layout_width="297dp"
        android:layout_height="269dp"
        android:contentDescription="@string/logotipo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unidad2_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvUnidad2UltimoPuntaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/ltimo_puntaje_obtenido"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUnidad2logo" />

    <TextView
        android:id="@+id/tvUnidad2TiempoParaResolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/tiempo_para_resolver"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnidad2Puntaje" />

    <TextView
        android:id="@+id/tvUnidad2Puntaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/carrois_gothic"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnidad2UltimoPuntaje"
        tools:text="100.00" />

    <TextView
        android:id="@+id/tvUnidad2Tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/carrois_gothic"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnidad2TiempoParaResolver"
        tools:text="59:00 minutos" />

    <Button
        android:id="@+id/btnUnidad2Comenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/comenzar"
        android:textColor="#795548"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnidad2Tiempo" />
</androidx.constraintlayout.widget.ConstraintLayout>